--- a/dlr_tables.css
+++ b/dlr_tables.css
@@ -38,7 +38,32 @@ table.schedule caption {
 
 
 /* Row Group Styles */
+table.schedule thead {
+    background: rgb(153, 0, 153);
+    color: white;
+}
 
+table.schedule tfoot {
+    background: black;
+    color: white;
+}
 
+/* table.schedule thead tr {
+    height: 30px;
+}
+
+table.schedule tbody tr {
+    height: 40px;
+} */
 
 /* Column Group Styles */
+
+col#firstCol {
+    background: rgb(218, 210, 218);
+    width: 16%;
+}
+
+col.dayCols {
+    background: rgb(255, 220, 255);
+    width: 12%;
+}
