Final Commit Push
Ready for review. Used columns to separate a page and split different pieces of data with different parts of the page, worked with spanning of columns and height with tables.

--- a/dlr_tables.css
+++ b/dlr_tables.css
@@ -27,6 +27,8 @@ table.schedule {
 table.schedule th,
 table.schedule td {
     border: 1px solid grey;
+    padding: 5px;
+    vertical-align: top;
 }
 
 
@@ -48,13 +50,13 @@ table.schedule tfoot {
     color: white;
 }
 
-/* table.schedule thead tr {
+table.schedule thead tr {
     height: 30px;
 }
 
 table.schedule tbody tr {
     height: 40px;
-} */
+}
 
 /* Column Group Styles */
 
